crates/search/tests/vector/snapshots/mod.rs/add_remove_one_vector_4588/document-deleted.snap
---
source: crates/indexsearch/tests/vector/mod.rs
---
{
  "uid": "[uid]",
  "batchUid": "[batch_uid]",
  "indexUid": "doggo",
  "status": "succeeded",
  "type": "documentAdditionOrUpdate",
  "canceledBy": null,
  "details": {
    "receivedDocuments": 1,
    "indexedDocuments": 1
  },
  "error": null,
  "duration": "[duration]",
  "enqueuedAt": "[date]",
  "startedAt": "[date]",
  "finishedAt": "[date]"
}
